--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspensionForCheck.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspensionForCheck.cshtml
@@ -78,10 +78,12 @@
     <dl class="row">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Id)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Id)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Date)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(m => m.Date)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Maintitle)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Maintitle)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(m => m.subtitle)</dt>
-        <dd class="col-sm-9">@Html.DisplayFor(m => m.subtitle)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Subtitle)</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(m => m.Subtitle)</dd>
     </dl>
 </div>
 <div>
