--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListCreate.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListCreate.cshtml
@@ -42,9 +42,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
                 <div style="display:flex;">
-                    <label asp-for="Id" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Id" class="form-control" required />
-                    <span asp-validation-for="Id" class="field-error"></span>
+                    <label asp-for="Date" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Date" class="form-control" required />
+                    <span asp-validation-for="Date" class="field-error"></span>
                 </div>
                 <div style="display:flex;">
                     <label asp-for="Maintitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
@@ -52,9 +52,9 @@
                     <span asp-validation-for="Maintitle" class="field-error"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="subtitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="subtitle" class="form-control" required />
-                    <span asp-validation-for="subtitle" class="field-error"></span>
+                    <label asp-for="Subtitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Subtitle" class="form-control" required />
+                    <span asp-validation-for="Subtitle" class="field-error"></span>
                 </div>
             </div>
             <div class="form-group">
