--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDelete.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDelete.cshtml
@@ -3,7 +3,41 @@
 @{
     ViewData["Title"] = "待辦事項清單刪除";
 }
+<style>
+    .return {
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        background-color: blue;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+    }
 
+        .return:hover {
+            text-decoration: none;
+            color: blue;
+            background-color: white;
+            border: 1px blue solid;
+        }
+
+    .delete {
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        background-color: red;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+    }
+
+        .delete:hover {
+            text-decoration: none;
+            color: red;
+            background-color: white;
+            border: 1px red solid;
+        }
+</style>
 <h1>待辦事項清單刪除</h1>
 
 <h3>你確定要刪除這筆清單嗎</h3>
@@ -12,10 +46,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Maintitle)
@@ -24,16 +58,16 @@
             @Html.DisplayFor(model => model.Maintitle)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.subtitle)
+            @Html.DisplayNameFor(model => model.Subtitle)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.subtitle)
+            @Html.DisplayFor(model => model.Subtitle)
         </dd>
     </dl>
     
     <form asp-action="DoListDelete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="刪除" class="btn btn-danger" /> |
+        <input type="submit" value="刪除" class="delete" /> |
         <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">返回待辦事項清單</a>
     </form>
 </div>
