--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListEdit.cshtml
@@ -30,10 +30,15 @@
         <form asp-action="DoListEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
-                <div style="display:flex;">
+                <div style="display:flex; display:none;" >
                     <label asp-for="Id" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Id" readonly class="form-control" />
+                    <input asp-for="Id" class="form-control" />
                     <span asp-validation-for="Id" class="text-danger"></span>
+                </div>
+                <div style="display:flex;">
+                    <label asp-for="Date" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Date" class="form-control" />
+                    <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
                     <label asp-for="Maintitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
