--- a/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
@@ -109,6 +109,23 @@
                 </svg>進程CPU與記憶體使用率
             </a>
         </p>
+        <p class="menu-item whfora">
+            <a asp-controller="AdministratorToDoList" asp-action="Dolist" class="navtext" style="min-width:368px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-.5-.5H2zM3 3H2v1h1V3z" />
+                    <path d="M5 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM5.5 7a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 4a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9z" />
+                    <path fill-rule="evenodd" d="M1.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5V7zM2 7h1v1H2V7zm0 3.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5H2zm1 .5H2v1h1v-1z" />
+                </svg>待辦事項
+            </a>
+        </p>
+        <p class="menu-item whfora">
+            <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="navtext" style="min-width:368px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-check2-all" viewBox="0 0 16 16">
+                    <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0l7-7zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0z" />
+                    <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708z" />
+                </svg>待辦事項
+            </a>
+        </p>
     </div>
 </div>
 
@@ -133,30 +150,30 @@
                 @foreach (var Users in Model)
                 {
                         <div>
-                            <div class="card-body">
+                            <div class="card-body" style="width:300px">
                             @{
                                 string Name = Users.Name;
                                 string[] segmentation = Name.Split('@');
                                 string username = segmentation[0];
                                 string fullName = username;
                             }
-                                <div style="padding:10px; width:330px; text-align:center; color:white; font-weight:bold; font-size:25px; background-color:#87cefa;">@fullName</div>
-                                <div style="display:flex;width:330px;">
+                                <div style=" width:100%; padding:10px; text-align:center; color:white; font-weight:bold; font-size:25px; background-color:#87cefa;">@fullName</div>
+                                <div style="display:flex;">
                                     @*<div style="display:flex; flex-direction:column; justify-content:space-between; height:160px;">*@
                                         <div class="tagtop"></div>
                                         @*<div class="tagbottom"></div>*@
                                     @*</div>*@
                                     <div style="display:flex; flex-direction:column; gap:20px;background-color: #f0f8ff; padding:30px;">
-                                        <div style="display:flex;width:260px;">
-                                            <p style="font-weight:bold; font-size:20px; width:30%;">綽號:</p>
+                                        <div style="display:flex;">
+                                            <p style="font-weight:bold; font-size:20px;">綽號:</p>
                                             <p class="card-text" style="display:flex; text-align:center; align-items:center; justify-content:center; font-size:15px;width:70%">@Users.Nickname</p>
                                         </div>
-                                        <div style="display:flex;width:260px;">
-                                            <p style="font-weight:bold; font-size:20px; width:30%;">Email:</p>
+                                        <div style="display:flex;">
+                                            <p style="font-weight:bold; font-size:20px; ">Email:</p>
                                             <p class="card-text" style="display:flex;text-align:center; align-items:center; justify-content:center; font-size:15px;width:70%" ">@Users.Email</p>
                                         </div>
-                                        <div style="display:flex;width:260px;">
-                                            <p style="font-weight:bold; font-size:20px; width:30%;">電話:</p>
+                                        <div style="display:flex;">
+                                            <p style="font-weight:bold; font-size:20px; ">電話:</p>
                                             <p class="card-text" style="display:flex;text-align:center; align-items:center; justify-content:center; font-size:15px;width:70%" ">@Users.PhoneNo</p>
                                         </div>
                                     </div>
@@ -166,9 +183,6 @@
                         </div>
                 }
                     <div>
-                        <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">測試</a>
-                        <a asp-controller="AdministratorToDoList" asp-action="DoListForCheck" class="return">測試</a>
-                    </div>
                 </div>
                 </div>
             </div>
