--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDelete.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDelete.cshtml
@@ -68,6 +68,6 @@
     <form asp-action="DoListDelete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="刪除" class="delete" /> |
-        <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">返回待辦事項清單</a>
+        <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="return">回待辦事項審核</a>
     </form>
 </div>
