--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspensionForCheck.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspensionForCheck.cshtml
@@ -89,5 +89,5 @@
 <div>
     <a asp-controller="AdministratorToDoList" asp-action="checkT" asp-route-id="@Model.Id" class="top">審核通過</a>
     <a asp-controller="AdministratorToDoList" asp-action="checkF" asp-route-id="@Model.Id" class="common">審核失敗</a>
-    <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">返回待辦事項清單</a>
+    <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="return">回待辦事項審核</a>
 </div>
