--- a/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
@@ -3,22 +3,30 @@
 @{
     ViewData["Title"] = "管理員登入";
 }
+<style>
+    .list {
+        color:black;
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        background-color: white;
+    }
 
+</style>
 <div class="login-bg">
     <img src="~/adminimg/loginbg.jpg" />
 </div>
-    <div class="login-container">
+    <div class="login-container list">
         <h1>管理員登入</h1>
         <hr />
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="UserName" class="form-control" placeholder="帳號" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
+                <span asp-validation-for="UserName" class="text-danger" style="border-radius:5px;"></span>
             </div>
             <div class="form-group">
                 <input asp-for="Password" class="form-control" placeholder="密碼" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+            <span asp-validation-for="Password" class="text-danger" style="border-radius:5px;"></span>
             </div>
             <hr>
             <div class="form-group">
