--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListEdit.cshtml
@@ -27,29 +27,30 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="DoListEdit">
+        <form asp-action="DoListEdit" style="width:1200px;">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
                 <div style="display:flex; display:none;" >
-                    <label asp-for="Id" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <label asp-for="Id" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
                     <input asp-for="Id" class="form-control" />
                     <span asp-validation-for="Id" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="Date" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <label asp-for="Date" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
                     <input asp-for="Date" class="form-control" />
                     <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="Maintitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <label asp-for="Maintitle" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
                     <input asp-for="Maintitle" class="form-control" />
                     <span asp-validation-for="Maintitle" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="Subtitle" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Subtitle" class="form-control" />
+                    <label asp-for="Subtitle" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Subtitle" class="form-control"/>
                     <span asp-validation-for="Subtitle" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <input type="submit" value="保存" class="return" />
                 </div>
@@ -59,7 +60,7 @@
 </div>
 
 <div style="margin-top:10px">
-    <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">返回待辦事項清單</a>
+    <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="return">回待辦事項審核</a>
 </div>
 
 @section Scripts {
