--- a/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
@@ -44,7 +44,7 @@
             </a>
         </p>
         <p class="menu-item whfora" style="height:10%;">
-            <a asp-controller="AdminToUser" asp-action="UserData" class="no-hover">
+            <a asp-controller="AdminToUser" asp-action="UserData" class="navtext">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16" style="margin-right:10px;">
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                 </svg>使用者控管
@@ -78,21 +78,26 @@
                 </svg>進程CPU與記憶體使用率
             </a>
         </p>
+        <p class="navtextbg whfora" style="font-weight:bold; cursor:default;height:10%; min-width:368px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-border-top" viewBox="0 0 16 16" style="margin-right:10px;">
+                <path d="M0 0v1h16V0H0zm1 2.844v-.938H0v.938h1zm6.5-.938v.938h1v-.938h-1zm7.5 0v.938h1v-.938h-1zM1 4.719V3.78H0v.938h1zm6.5-.938v.938h1V3.78h-1zm7.5 0v.938h1V3.78h-1zM1 6.594v-.938H0v.938h1zm6.5-.938v.938h1v-.938h-1zm7.5 0v.938h1v-.938h-1zM.5 8.5h.469v-.031H1V7.53H.969V7.5H.5v.031H0v.938h.5V8.5zm1.406 0h.938v-1h-.938v1zm1.875 0h.938v-1H3.78v1zm1.875 0h.938v-1h-.938v1zm2.813 0v-.031H8.5V7.53h-.031V7.5H7.53v.031H7.5v.938h.031V8.5h.938zm.937 0h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zm1.875 0h.469v-.031h.5V7.53h-.5V7.5h-.469v.031H15v.938h.031V8.5zM0 9.406v.938h1v-.938H0zm7.5 0v.938h1v-.938h-1zm8.5.938v-.938h-1v.938h1zm-16 .937v.938h1v-.938H0zm7.5 0v.938h1v-.938h-1zm8.5.938v-.938h-1v.938h1zm-16 .937v.938h1v-.938H0zm7.5 0v.938h1v-.938h-1zm8.5.938v-.938h-1v.938h1zM0 16h.969v-.5H1v-.469H.969V15H.5v.031H0V16zm1.906 0h.938v-1h-.938v1zm1.875 0h.938v-1H3.78v1zm1.875 0h.938v-1h-.938v1zm1.875-.5v.5h.938v-.5H8.5v-.469h-.031V15H7.53v.031H7.5v.469h.031zm1.875.5h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zm1.875-.5v.5H16v-.969h-.5V15h-.469v.031H15v.469h.031z" />
+            </svg>待辦事項
+        </p>
         <p class="menu-item whfora">
             <a asp-controller="AdministratorToDoList" asp-action="Dolist" class="navtext" style="min-width:368px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-list-task" viewBox="0 0 16 16" style="margin-right:10px;">
                     <path fill-rule="evenodd" d="M2 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5V3a.5.5 0 0 0-.5-.5H2zM3 3H2v1h1V3z" />
                     <path d="M5 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM5.5 7a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 4a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9z" />
                     <path fill-rule="evenodd" d="M1.5 7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5V7zM2 7h1v1H2V7zm0 3.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5H2zm1 .5H2v1h1v-1z" />
-                </svg>待辦事項
+                </svg>待辦事項清單
             </a>
         </p>
         <p class="menu-item whfora">
             <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="navtext" style="min-width:368px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-check2-all" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-check2-all" viewBox="0 0 16 16" style="margin-right:10px;">
                     <path d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0l7-7zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0z" />
                     <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708z" />
-                </svg>待辦事項
+                </svg>待辦事項審核
             </a>
         </p>
     </div>
