--- a/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
@@ -17,7 +17,7 @@
     </ul>
 
     <div class="d-flex">
-        <a asp-action="Index" asp-controller="Home" class="btn btn-primary">回首頁</a>
-        <a asp-action="SignOut" asp-controller="Account" class="ml-5 btn btn-danger">登出</a>
+        <a asp-action="Index" asp-controller="Home" class="btn btn-outline-primary">回首頁</a>
+        <a asp-action="SignOut" asp-controller="Account" class="ml-5 btn btn-outline-danger">登出</a>
     </div>
 </div>
