--- a/CoreMVC5_UsedBookProject/Views/Account/ResultMessage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ResultMessage.cshtml
@@ -11,6 +11,6 @@
     @if (!String.IsNullOrEmpty(ViewData["Message"].ToString()))
     {
         <p>@ViewData["Message"]</p>
-        <a asp-controller="Account" asp-action="Login" class="btn btn-primary">回到登入</a>
+        <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">回到登入</a>
     }
 </div>
