--- a/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
@@ -28,7 +28,7 @@
             <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
         </div>
         <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
         </div>
     </div>
     <h2>對方的商品 @Model.BuyerName</h2>
@@ -43,7 +43,7 @@
             <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
         </div>
         <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
         </div>
     </div>
     <br />
@@ -53,7 +53,7 @@
             <form action="~/Seller/BarterOrderDetails" method="post">
                 <input type="hidden" name="OrderId" value="@Model.OrderId">
                 <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-danger mr-2" name="submit" value="拒絕交換">拒絕交換</button>
+                <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="拒絕交換">拒絕交換</button>
             </form>
         }
         @if (Model.Status == "待取消")
@@ -61,10 +61,10 @@
             <form action="~/Seller/BarterOrderDetails" method="post">
                 <input type="hidden" name="OrderId" value="@Model.OrderId">
                 <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
+                <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
             </form>
         }
-        <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+        <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
     </div>
     @if (Model.Products.Count > 0 && Model.Status == "待確認")
     {
@@ -84,14 +84,14 @@
                     <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@item.Status</td></tr>
                 </table>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
+                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
                     @if (Model.Status == "待確認")
                     {
                         <form action="~/Seller/BarterOrderDetails" method="post">
                             <input type="hidden" name="OrderId" value="@Model.OrderId">
                             <input type="hidden" name="trade" value="@Model.Trade">
                             <input type="hidden" name="ProductId" value="@item.ProductId">
-                            <button type="submit" class="btn btn-primary mt-2" name="submit" value="接受與此書交換">接受與此書交換</button>
+                            <button type="submit" class="btn btn-outline-primary mt-2" name="submit" value="接受與此書交換">接受與此書交換</button>
                         </form>
                     }
                 </div>
