--- a/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
@@ -36,7 +36,7 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="變更保存" class="btn btn-primary" />
+                    <input type="submit" value="變更保存" class="btn btn-outline-primary" />
                 </div>
             </form>
         </div>
