--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -21,7 +21,7 @@
                         <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.src='/DeafultPictures/EmptyUserIcon.png'">
                     </div>
                     <div class="d-flex align-items-end mt-2">
-                        <label for="file1" class="btn btn-primary">
+                        <label for="file1" class="btn btn-outline-primary">
                             選擇檔案
                         </label>
                         <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
@@ -45,34 +45,9 @@
                     <span asp-validation-for="PhoneNo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="變更保存" class="btn btn-primary" />
+                    <input type="submit" value="變更保存" class="btn btn-outline-primary" />
                 </div>
             </form>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger mt-5" data-toggle="modal" data-target="#staticBackdrop">
-                <i class="bi bi-trash"></i> 刪除帳號
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">確認刪除帳號?</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            確認刪除帳號?這將會永久消失此帳號
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                            <a href="@Url.Action("DeleteUser", "Account", new {Id = Model.Id})" class="btn btn-danger"><i class="bi bi-trash"></i> 刪除</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
