--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
                 <div class="form-group">
-                    <input type="submit" value="登入" class="btn btn-primary" />
+                    <input type="submit" value="登入" class="btn btn-outline-primary" />
                 </div>
             </form>
         </div>
