--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -14,20 +14,13 @@
         <partial name="~/Views/Seller/CreateTablePartial/ProductImage.cshtml" />
         <partial name="~/Views/Seller/CreateTablePartial/SaleInformation.cshtml" />
         <input type="hidden" name="ProductId" class="form-control" value="@Model.ProductId" readonly />
-        <div id="Test_Image_div" class="d-none">
-            Test_Image_div
-        </div>
         <br />
         <div>
-            <button type="submit" name="Status" class="btn btn-success disable-onbeforeunload" value="已上架"><i class="bi bi-save"></i> 儲存並上架</button>
-            <button type="submit" name="Status" class="btn btn-outline-green disable-onbeforeunload" value="未上架"><i class="bi bi-save"></i> 儲存並下架</button>
-            <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+            <button type="submit" name="Status" class="btn btn-outline-success disable-onbeforeunload" value="已上架"><i class="bi bi-save"></i> 儲存並上架</button>
+            <button type="submit" name="Status" class="btn btn-outline-primary disable-onbeforeunload" value="未上架"><i class="bi bi-save"></i> 儲存並下架</button>
+            <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
         </div>
     </form>
-    <div id="test_div" class="d-none">
-        <img src="" alt="test" id="test">
-        <p id="test_p"></p>
-    </div>
 </div>
 @section topCSS{
     <link href="~/css/seller/edittablepartial.css" asp-append-version="true" rel="stylesheet" />
