--- a/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
@@ -17,12 +17,12 @@
     <div>
         @if (Model.Status == "已上架" || Model.Status == "未上架")
         {
-            <a href="@Url.Action("Edit", "Seller", new {ProductId = Model.ProductId})" class="btn btn-warning"><i class="bi bi-pencil-square"></i> 編輯</a>
+            <a href="@Url.Action("Edit", "Seller", new {ProductId = Model.ProductId})" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i> 編輯</a>
         }
         @if (Model.Status == "未上架")
         {
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop">
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#staticBackdrop">
                 <i class="bi bi-trash"></i> 刪除
             </button>
 
@@ -40,14 +40,14 @@
                             確認移至刪除區?
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                            <a href="@Url.Action("Delete", "Seller", new {ProductId = Model.ProductId, Trade = Model.Trade})" class="btn btn-danger mt-2"><i class="bi bi-trash"></i> 刪除</a>
+                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">取消</button>
+                            <a href="@Url.Action("Delete", "Seller", new {ProductId = Model.ProductId, Trade = Model.Trade})" class="btn btn-outline-danger mt-2"><i class="bi bi-trash"></i> 刪除</a>
                         </div>
                     </div>
                 </div>
             </div>
         }
-        <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+        <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
     </div>
 </div>
 @section topCSS{
