--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -56,8 +56,8 @@
                 </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
 
-                    <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-                    <a href="@Url.Action("OrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
+                    <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    <a href="@Url.Action("OrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
                 </div>
             </div>
         }
@@ -78,8 +78,8 @@
                     <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
                 </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-                    <a href="@Url.Action("BarterOrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
+                    <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    <a href="@Url.Action("BarterOrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
                 </div>
             </div>
         }
