--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -17,27 +17,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1 flex-wrap justify-content-between">
+        <nav class="d-flex bg-white border-bottom box-shadow">
+            <div class="container-fluid d-flex">
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a>
+                <div class="flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 d-flex flex-row">
                         <partial name="_NavItemPartial"></partial>
-                        <li class="nav-item p-2 w-100 order-sm-2">
-                            <form class="form-inline w-100" action="~/Home/SearchProducts" method="get">
-                                <div class="d-flex w-100">
-                                    <input class="form-control mr-sm-2 align-self-center w-100" type="search" placeholder="輸入書名或ISBN" id="searchInput" oninput="getPredictions()" aria-label="Search" name="name">
-                                    <div id="predictionList"></div>
-                                    <button class="btn btn-outline-success my-2 my-sm-0" style="width: 50px;" type="submit">
-                                        <span class="fa fa-search"></span>
-                                    </button>
-                                </div>
-                            </form>
-                        </li>
                     </ul>
                 </div>
             </div>
