--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -19,15 +19,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1 flex-wrap justify-content-between">
+        <nav class="d-flex bg-white border-bottom box-shadow">
+            <div class="container-fluid d-flex">
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a>
+                <div class="flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 d-flex flex-row">
                         <partial name="_NavItemPartial"></partial>
                     </ul>
                 </div>
