--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -1,18 +1,11 @@
-﻿body, main, nav, footer, textarea:read-only {
-    background-image: url('/adminimg/wood.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.page-link {
+﻿.page-link {
     background-color: #282B2E05;
 }
     .page-link:hover {
         background-color: #282B2E !important;
         color: white;
     }
-body {
-    max-width: 100%;
-}
+
 h1 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -34,6 +27,9 @@ h1 {
     background-color: #282B2E;
     color: white !important;
 }
+.aside-link  {
+    width: fit-content;
+}
 .aside-link > a {
     color: black;
     font-size: 18px;
@@ -41,7 +37,7 @@ h1 {
 }
 .aside-link:hover {
     background-color: wheat;
-    border-radius: 15%;
+    border-radius: 10px;
     transition: .5s;
 }
     .aside-link:hover > a {
@@ -87,14 +83,13 @@ img {
     z-index: 999;
     width: 100%;
     max-width: 500px;
-    background-image: url('/adminimg/wood.jpg');
-    background-repeat: no-repeat;
+    background-color: wheat;
 }
 #switch-login:checked + .login-menu-full {
     right: 0;
 }
 body {
-    overflow-x: hidden;
+    min-width: 992px;
 }
 
 main, footer {
@@ -142,3 +137,65 @@ img {
     #topBtn:hover {
         background-color: #555; 
     }
+.nav-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/**/
+.btn-custom,
+.btn-custom:focus {
+    position: relative;
+    z-index: 1;
+    min-width: 100px;
+    border: 0px solid #D24D57;
+    border-radius: 0;
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    padding: 10px 0px;
+}
+
+    .btn-custom:after {
+        content: "";
+        position: absolute;
+        height: 0%;
+        left: 50%;
+        top: 50%;
+        width: 150%;
+        z-index: -1;
+        background: #D24D57;
+        -moz-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+        -ms-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+        -webkit-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+        transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+        -webkit-transition: all 0.75s ease 0s;
+        -moz-transition: all 0.75s ease 0s;
+        -o-transition: all 0.75s ease 0s;
+        transition: all 0.75s ease 0s;
+    }
+
+    .btn-custom:hover {
+        color: #FFFFFF;
+        text-shadow: none;
+    }
+
+        .btn-custom:hover:after {
+            height: 450%;
+        }
+/**/
