--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
@@ -9,10 +9,13 @@
 .gap-5px {
     gap: 5px;
 }
-.status > li > a {
+.status {
     font-size: 18px;
     color: black;
 }
+    .status:hover {
+        color: blue;
+    }
 @media (min-width:576px) {
 }
 @media (min-width:768px) {
